引数を環境変数に移動

--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -10,15 +10,10 @@
             "request": "launch",
             "preLaunchTask": "build",
             "program": "${workspaceFolder}/bin/Debug/net7.0/mastacrss.dll",
-            "args": [
-                "--mastodon-url",
-                "https://rss-mstdn.studiofreesia.com",
-                "--admin-access-token",
-                "--rss-url",
-            ],
             "cwd": "${workspaceFolder}",
             "console": "internalConsole",
-            "stopAtEntry": false
+            "stopAtEntry": false,
+            "envFile": "${workspaceFolder}/.env",
         },
         {
             "name": ".NET Core Attach",
