--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -20,6 +20,7 @@
 		"vscode": {
 			"extensions": [
 				"ms-dotnettools.csharp",
+				"patcx.vscode-nuget-gallery",
 				"redhat.vscode-yaml"
 			]
 		}
