--- a/mastacrss.csproj
+++ b/mastacrss.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
     <PackageReference Include="PasswordGenerator" Version="2.1.0" />
     <PackageReference Include="VYaml" Version="0.13.1" />
+    <PackageReference Include="Sentry.Extensions.Logging" Version="3.34.0" />
   </ItemGroup>
 
 </Project>
