--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -4,6 +4,7 @@ on:
   push:
     branches:
       - master
+  pull_request:
 
 jobs:
   build_and_push:
@@ -31,5 +32,5 @@ jobs:
           Repository=${{ github.repository }}
         labels: |
           org.opencontainers.image.source=https://github.com/${{ github.repository }}
-        push: true
+        push: ${{ github.ref_name == 'master' }}
         tags: ghcr.io/${{ env.image_tag }}:${{ github.sha }},ghcr.io/${{ env.image_tag }}:dev
