--- a/mastacrss.csproj
+++ b/mastacrss.csproj
@@ -12,6 +12,8 @@
     <PackageReference Include="ConsoleAppFramework" Version="4.2.4" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.50" />
     <PackageReference Include="Mastonet" Version="2.3.1" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Analyzers" Version="7.0.9" PrivateAssets="all" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Sqlite" Version="7.0.9" />
     <PackageReference Include="Microsoft.Extensions.Options" Version="7.0.1" />
     <PackageReference Include="Microsoft.Extensions.Options.ConfigurationExtensions" Version="7.0.0" />
     <PackageReference Include="PasswordGenerator" Version="2.1.0" />
