--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -7,33 +7,9 @@
             "type": "process",
             "args": [
                 "build",
-                "${workspaceFolder}/mastacrss.csproj",
+                "${workspaceFolder}/mastacrss/mastacrss.csproj",
                 "/property:GenerateFullPaths=true",
                 "/consoleloggerparameters:NoSummary"
-            ],
-            "problemMatcher": "$msCompile"
-        },
-        {
-            "label": "publish",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "publish",
-                "${workspaceFolder}/mastacrss.csproj",
-                "/property:GenerateFullPaths=true",
-                "/consoleloggerparameters:NoSummary"
-            ],
-            "problemMatcher": "$msCompile"
-        },
-        {
-            "label": "watch",
-            "command": "dotnet",
-            "type": "process",
-            "args": [
-                "watch",
-                "run",
-                "--project",
-                "${workspaceFolder}/mastacrss.csproj"
             ],
             "problemMatcher": "$msCompile"
         }
