--- a/mastacrss/mastacrss.csproj
+++ b/mastacrss/mastacrss.csproj
@@ -10,6 +10,7 @@
   <ItemGroup>
     <PackageReference Include="CodeHollow.FeedReader" Version="1.2.6" />
     <PackageReference Include="ConsoleAppFramework" Version="4.2.4" />
+    <PackageReference Include="Ensure.That" Version="10.1.0" />
     <PackageReference Include="HtmlAgilityPack" Version="1.11.54" />
     <PackageReference Include="JsonDocumentPath" Version="1.0.3" />
     <PackageReference Include="Mastonet" Version="2.3.1" />
