--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -15,6 +15,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - uses: docker/setup-buildx-action@v3
+    - uses: gittools/actions/gitversion/setup@v0
     - uses: gittools/actions/gitversion/execute@v0
     - run: |
         IMAGE_ID=${{ github.repository }}
