--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -16,6 +16,8 @@ jobs:
     - uses: actions/checkout@v4
     - uses: docker/setup-buildx-action@v3
     - uses: gittools/actions/gitversion/setup@v0
+      with:
+        versionSpec: '5.x'
     - uses: gittools/actions/gitversion/execute@v0
     - run: |
         IMAGE_ID=${{ github.repository }}
