リリースするバージョンの修正と起動時にログにアプリ情報吐いとく

--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -51,4 +51,4 @@ jobs:
         SENTRY_AUTH_TOKEN: ${{ secrets.SENTRY_AUTH_TOKEN }}
       with:
         environment: production
-        version: ${{ env.GitVersion_FullSemVer }}
+        version: ${{ env.GitVersion_InformationalVersion }}
