--- a/.github/workflows/docker-publish.yml
+++ b/.github/workflows/docker-publish.yml
@@ -45,6 +45,7 @@ jobs:
         push: ${{ github.ref_name == 'master' }}
         tags: ghcr.io/${{ env.image_tag }}:${{ env.GitVersion_FullSemVer }},ghcr.io/${{ env.image_tag }}:dev
     - uses: getsentry/action-release@v1
+      if: github.ref == 'refs/heads/master'
       env:
         SENTRY_ORG: ${{ secrets.SENTRY_ORG }}
         SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
